# flow_inspector

./: .gitignore  CMakeLists.txt  convert_rules.py  converted_rules.txt  error_rules.txt  gen_rules.py  prepare.sh  run.sh  suricata_parser.py  suricata_parser_to_zeek.py  test.sh  threads_test.cpp  valgrind.supp
cmake/Modules/: FindPcap.cmake
docs/: uml_gant.puml  uml_seq.puml
include/: analyzer.h  content_signature.h  debug_logger.h  events_handler.h  ids.h  ids_cli.h  ids_lib.h  internal_structs.h  ip_parser.h  ip_signature.h  logger.h  packet_origin.h  packet_processors_pool.h  pcap_reader.h  pcap_writer.h  raw_bytes_signature.h  signature_factory.h  tcp_signature.h  traffic_capture.h  traffic_capturer.h  transport_layers_enum.h
src/: analyzer.cpp  content_signature.cpp  events_handler.cpp  ids.cpp  ids_cli.cpp  ids_lib.cpp  internal_structs.cpp  ip_signature.cpp  logger.cpp  main.cpp  packet_origin.cpp  packet_processors_pool.cpp  pcap_reader.cpp  pcap_writer.cpp  raw_bytes_signature.cpp  signature_factory.cpp  tcp_signature.cpp  traffic_capturer.cpp
tests/: CMakeLists.txt  analyzer_test.cpp  content_signature_test.cpp  events_handler_test.cpp  ids_test.cpp  internal_structs_test.cpp  ip_signature_test.cpp  logger_test.cpp  packet_processors_pool_test.cpp  pcap_reader_test.cpp  pcap_writer_test.cpp  tcp_signature_test.cpp  test_1.cpp
tests/docker_env/: Dockerfile
tests/pcap_files/: a_lot_of.pcap  double_packets.pcap  http.pcap  single_packet.pcap
tests/rule_files/: 1_sig.rule  1_sig_with_offset.rule  2_rules.rule  2_rules_same_sig.rule  2_sig.rule  a_lot_of.rule  bad.rule  double_packets_one_hit.rule  pcap_all.rule
